manifest/sveltosctl_manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: projectsveltos
---
apiVersion: v1
kind: Service
metadata:
  name: sveltosctl
  namespace: projectsveltos
  labels:
    app: sveltosctl
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None
  selector:
    app.kubernetes.io/name: sveltosctl
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sveltosctl
  namespace: projectsveltos
  labels:
    app.kubernetes.io/name: sveltosctl
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sveltosctl
  replicas: 1
  serviceName: "sveltosctl"
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sveltosctl
    spec:
      serviceAccountName: sveltosctl
      containers:
      - name: sveltosctl
        image: docker.io/projectsveltos/sveltosctl:v1.16.0
        imagePullPolicy: IfNotPresent
        command:
          - /sveltosctl
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsUser: 0
        volumeMounts:
        - mountPath: /etc/localtime
          name: tz-config
        - mountPath: /tmp
          name: tmp
      volumes:
      - emptyDir: {}
        name: tmp
      - hostPath:
          path: /usr/share/zoneinfo/America/Los_Angeles
        name: tz-config
---
---
